# citer

./: .gitignore  README.md  adinebook.py  adinebook_test.py  app.py  bibtex.py  citer-cli  commons.py  config.py  config.py.example  conv.py  ctn_en.py  ctn_fa.py  doi.py  doi_test.py  dummy_requests.py  generator_en.py  generator_fa.py  googlebooks.py  googlebooks_test.py  html_en.html  html_en.py  html_fa.html  html_fa.py  install.py  isbn.py  isbn_test.py  jalali.py  main.py  noorlib.py  noorlib_test.py  noormags.py  noormags_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ris.py  ruff.toml  setup.py  (+20 more)
dev/: googlebooksdomains.py  update_free_doi_registrants.py
lib/: __init__.py  adinebook.py  archives.py  bibtex.py  citoid.py  commons.py  doi.py  generator_en.py  generator_fa.py  googlebooks.py  isbn_oclc.py  jstor.py  ketabir.py  language.py  noorlib.py  noormags.py  pubmed.py  ris.py  urls.py  urls_authors.py  uwsgi.ini  versioin_info.py  version_info.py  waybackmachine.py
src/: __init__.py  adinebook.py  adinebook_test.py  bibtex.py  commons.py  doi.py  doi_test.py  dummy_requests.py  generator_en.py  generator_fa.py  googlebooks.py  googlebooks_test.py  html_en.py  html_fa.py  isbn.py  isbn_oclc.py  isbn_test.py  noorlib.py  noorlib_test.py  noormags.py  noormags_test.py  pubmed.py  pubmed_test.py  ris.py  test_en.py  test_fa.py  urls.py  urls_authors.py  urls_test.py  waybackmachine.py  waybackmachine_test.py
test/: __init__.py  adinebook_test.py  conftest.py  doi_test.py  dummy_requests.py  googlebooks_test.py  isbn_oclc_test.py  isbn_test.py  jstor_test.py  ketabir_test.py  noorlib_test.py  noormags_test.py  pubmed_test.py  test_app.py  test_en.py  test_fa.py  urls_authors_test.py  urls_test.py  waybackmachine_test.py
tests/: .gitignore  __init__.py  adinebook_test.py  citoid_test.py  conftest.py  doi_test.py  dummy_requests.py  generator_en_test.py  googlebooks_test.py  isbn_oclc_test.py  isbn_test.py  jstor_test.py  ketabir_test.py  noorlib_test.py  noormags_test.py  pubmed_test.py  test_app.py  test_archives.py  test_commons.py  test_en.py  test_fa.py  urls__authors_test.py  urls_authors_test.py  urls_test.py  waybackmachine_test.py
yadkardlib/: adinebook.py  adinebook_test.py  bbc.py  bibtex.py  boston.py  citation.py  config.py  conv.py  converter.py  convertors.py  dailymail.py  doi.py  doi_test.py  fawikicite.py  fawikiref.py  googlebooks.py  googlebooks_test.py  html.py  html_en.py  html_fa.py  huffingtonpost.py  isbn.py  isbn_test.py  mirror.py  noorlib.py  noorlib_test.py  noormags.py  noormags_test.py  nyt.py  reference.py  ris.py  telegraph.py  (+12 more)
(+20 files in other folders)
