[project]
version = '0.0.dev0'
name = 'citer'
requires-python = '>=3.11'
dependencies = [
    "curl-cffi>=0.7.3",
    "isbnlib>=3.10.14",
    "jdatetime>=5.2.0",
    "langid>=1.1.6",
    "lxml>=5.4.0",
    "regex>=2024.11.6",
]

[tool.ruff]
line-length = 79
format.quote-style = 'single'
lint.isort.combine-as-imports = true
lint.extend-select = [
    'FA',  # flake8-future-annotations
    'I',  # isort
    'UP',  # pyupgrade
]
lint.ignore = [
    'UP027',  # list comprehensions are faster than generator expressions
    'E721',  # Do not compare types, use `isinstance()`
]

[tool.pytest.ini_options]
addopts = '--quiet --tb=short'
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = 'session'
asyncio_default_test_loop_scope = 'session'

[tool.pyright]
typeCheckingMode = 'standard'
reportDeprecated = "warning"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = true

[dependency-groups]
dev = [
    "pytest-socket>=0.7.0",
    "python-decouple>=3.8",
]
