[project]
version = '0.0.dev0'
name = 'citer'
requires-python = '>=3.11'
dependencies = [
    "curl-cffi>=0.7.3",
    "isbnlib>=3.10.14",
    "jdatetime>=5.2.0",
    "langid>=1.1.6",
    "lxml>=5.4.0",
    "regex>=2024.11.6",
]

[project.urls]
Homepage = "https://github.com/5j9/citer"
[tool.ruff]
line-length = 79
format.quote-style = 'single'
lint.isort.combine-as-imports = true
lint.extend-select = [
    'W605', # invalid-escape-sequence
    'FA',  # flake8-future-annotations
    'I',  # isort
    'UP',  # pyupgrade
    'RUF', # Ruff-specific rules (RUF)
]
lint.ignore = [
    'E721',  # Do not compare types, use `isinstance()`
    'RUF001',  # ambiguous-unicode-character-string	
    'RUF002',  # ambiguous-unicode-character-docstring
    'RUF003',  # ambiguous-unicode-character-comment
    'RUF012',  # mutable-class-default
]

[tool.pytest.ini_options]
addopts = '--quiet --tb=short'

[tool.pyright]
typeCheckingMode = 'standard'
reportDeprecated = "warning"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = true
reportInvalidStringEscapeSequence = false
reportConstantRedefinition = 'error'
reportTypeCommentUsage = 'warning'
reportUnnecessaryComparison = 'warning'

[dependency-groups]
dev = [
    "pytest-socket>=0.7.0",
    "python-decouple>=3.8",
]
